[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.0" }
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.0" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
hashbrown = "0.14"
